--- a/public/index.html
+++ b/public/index.html
@@ -3,14 +3,14 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/test.ico" />
+  <link rel="icon" href="%PUBLIC_URL%/car.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
 
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-  <title>Career Test Task</title>
+  <title>Fast Rent</title>
   <script type="text/javascript">
 
     (function (l) {
